Merged HEAD-BUG-FIX (5.1/Cloud) to HEAD (5.1/Cloud)    104271: Fix for     ACE-3827    SOLR 4 - Shard based on ACL hash    - the sub system supports sharding
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/alfresco/HEAD/root@104398 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261